<resources>
    <string name="app_name">AirLinesApp</string>
    <string name="airlines">Airlines</string>
    <string name="copyRight">© Reserved to @ Harri</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passengers">Passengers</string>
    <string name="airline_image">airlineImage</string>
    <string name="add_new_item">Add New Item</string>
    <string name="airline_name">Airline Name</string>
    <string name="country">Country</string>
    <string name="slogan">Slogan</string>
    <string name="head_quarter">Head quarter</string>
    <string name="website">WebSite</string>
    <string name="established">Established</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="trips">Trips Number(by default zero)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete Passenger</string>
    <string name="delete_dialog_message">Are you sure you want to delete this passenger?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="set">Set</string>
    <string name="error_sending_data">Error sending data, try again later!</string>
    <string name="new_airline">New Airline</string>
    <string name="new_passenger">New Passenger</string>
    <string name="edit_passenger">Edit Passenger</string>
    <string name="deleted_successfully">Passenger data deleted successfully.</string>
    <string name="error_deleting">Error deleting, try again later!</string>
    <string name="search">Search</string>
    <string name="LOADING">Loading</string>
    <string name="CHECK_NETWORK_ERROR">Check your network connection!</string>
    <string name="EMPTY_LIST">No data to show</string>
    <string name="EMPTY_SEARCH">No Result Found</string>
    <string name="too_short">Too short</string>
    <string name="invalid_website">Invalid Website</string>
    <string name="required">Required</string>
    <string name="year_picker_title">Select a Year</string>
    <string name="updated_successfully">updated successfully</string>
    <string name="was_added_successfully">was added successfully</string>
    <string name="unable_to_retrieve_data">Unable to retrieve data </string>
</resources>