<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.airlinesapp.ui.home.passengers.editPassenger.EditPassengerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="@dimen/page_padding"
        tools:context=".ui.home.passengers.editPassenger.EditPassengerActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passengerNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/box_margin_bottom"
                android:hint="@string/passenger_name"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:helperText="Required"
                app:helperTextTextColor="@color/design_default_color_error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passengerNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_field_height"
                    android:lines="1"
                    android:maxLength="12"
                    android:text="@={model.passengerName}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tripsContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:hint="@string/trips">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tripsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_field_height"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:text="@={model.trips}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/airlineNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/airline_name"
                android:labelFor="@+id/airlineAutoCompleteTextView"
                app:helperText="Required"
                app:helperTextTextColor="@color/design_default_color_error">

                <AutoCompleteTextView
                    android:id="@+id/airlineAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_field_height"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text="@={model.airlineName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:indeterminateTint="@color/primary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_field_height"
                android:layout_weight="0"
                android:backgroundTint="@color/secondary"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</layout>