<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isError"
            type="boolean" />

        <variable
            name="isEmpty"
            type="boolean" />

    </data>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.home.passengers.PassengersFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:listitem="@layout/single_passenger_view" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleGone="@{isLoading}" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/CHECK_NETWORK_ERROR"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:visibleGone="@{safeUnbox(isError)}" />
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="40dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:text="Tap tp Retry"-->
<!--            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"-->
<!--            app:visibleGone="@{safeUnbox(isError)}" />-->

        <ImageView
            android:id="@+id/reloadButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_refresh"
            app:visibleGone="@{safeUnbox(isError)}" />

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/EMPTY_LIST"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:visibleGone="@{safeUnbox(isEmpty)}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_new_item"
            app:srcCompat="@drawable/ic_add"
            app:tint="@android:color/white" />
    </FrameLayout>
</layout>